# comic-translate

./: .gitignore  README.md  comic.py  pyproject.toml  test.py  프리필.txt
app/translations/: ct_en.ts  ct_ko.ts
app/ui/settings/: credentials_page.py  settings_page.py  settings_ui.py
modules/: translator.py
modules/ocr/: factory.py  gemini_ocr.py  gpt_ocr.py  processor.py
modules/translation/: base.py  factory.py  processor.py
modules/translation/llm/: base.py  cerebras.py  claude.py  gemini.py  grok.py
modules/translator/: base.py  processor.py
modules/translator/llm/: base.py  claude.py  gemini.py  sys_prompt.py
modules/utils/: pipeline_utils.py  textblock.py  translator_utils.py
