[project]
name = "comic-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-vision-imageanalysis>=1.0.0b1",
    "deep-translator>=1.11.4",
    "deepl>=1.16.1",
    "huggingface-hub>=0.34.4",
    "img2pdf>=0.5.1",
    "jaconv>=0.3.4",
    "janome>=0.5.0",
    "jieba>=0.42.1",
    "largestinteriorrectangle>=0.2.0",
    "msgpack>=1.1.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "pdfplumber>=0.11.5",
    "py7zr>=0.20.8",
    "pyside6>=6.8.0",
    "pythainlp>=5.1.2",
    "rapidocr>=3.3.1",
    "rarfile>=4.1",
    "requests>=2.31.0",
    "setuptools>=80.9.0",
    "wget>=3.2",
]
